added copy to clipboard function

--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
   "dependencies": {
     "bootstrap": "^3.3.4",
     "jquery": "^2.1.4",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "zeroclipboard": "^2.2.0"
   },
   "vendors": [
     "react",
     "jquery",
-    "bootstrap"
+    "bootstrap",
+    "zeroclipboard"
   ]
 }
