--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
+    "classnames": "^2.1.2",
     "css-loader": "^0.14.2",
     "eslint": "^0.22.1",
     "eslint-loader": "^0.12.0",
